--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,4 @@
-name: CI-СD-Pipeline-to-AWS
+name: CI-СD-Pipeline-to-AWS-PHP
 env:
   EB_PACKAGE_S3_BUCKET_NAME: "devsecops-project-2022"
   EB_APPLICATION_NAME      : "PHP_APP"
