--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,7 +4,7 @@ env:
   EB_APPLICATION_NAME      : "PHP_APP"
   EB_APPLICATION_ID        : "arn:aws:elasticbeanstalk:ap-northeast-1:214980806952:application/MyFlask"
   EB_ENVIRONMENT_NAME      : "Phpapp-env"
-  DEPLOY_PACKAGE_NAME      : "flask_app_${{ github.sha }}.zip"
+  DEPLOY_PACKAGE_NAME      : "php_app_${{ github.sha }}.zip"
   AWS_REGION_NAME          : "eu-west-2"
      
 on:
@@ -19,7 +19,7 @@ jobs:
       - name: sast-scan
         uses: AppThreat/sast-scan-action@1.0.2  
         with:
-          type: "python"
+          type: "php"
           
 
   CI-pipeline:
@@ -47,7 +47,7 @@ jobs:
 
   CD-pipeline:
     runs-on: ubuntu-latest
-    needs: [ci-pipeline]
+    needs: [CI-pipeline]
     
     steps:
       - name: Configure my AWS Credentionals
