--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,8 +28,7 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
 
 env:
   AWS_REGION: eu-west-2                           # set this to your preferred AWS region, e.g. us-west-1
