--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,38 +1,75 @@
-# This is a basic workflow to help you get started with Actions
+# This workflow will build and push a new container image to Amazon ECR,
+# and then will deploy a new task definition to Amazon ECS, when there is a push to the master branch.
+#
+# To use this workflow, you will need to complete the following set-up steps:
+#
+# 1. Create an ECR repository to store your images.
+#    For example: `aws ecr create-repository --repository-name my-ecr-repo --region us-east-2`.
+#    Replace the value of the `ECR_REPOSITORY` environment variable in the workflow below with your repository's name.
+#    Replace the value of the `AWS_REGION` environment variable in the workflow below with your repository's region.
+#
+# 2. Create an ECS task definition, an ECS cluster, and an ECS service.
+#    For example, follow the Getting Started guide on the ECS console:
+#      https://us-east-2.console.aws.amazon.com/ecs/home?region=us-east-2#/firstRun
+#    Replace the value of the `ECS_SERVICE` environment variable in the workflow below with the name you set for the Amazon ECS service.
+#    Replace the value of the `ECS_CLUSTER` environment variable in the workflow below with the name you set for the cluster.
+#
+# 3. Store your ECS task definition as a JSON file in your repository.
+#    The format should follow the output of `aws ecs register-task-definition --generate-cli-skeleton`.
+#    Replace the value of the `ECS_TASK_DEFINITION` environment variable in the workflow below with the path to the JSON file.
+#    Replace the value of the `CONTAINER_NAME` environment variable in the workflow below with the name of the container
+#    in the `containerDefinitions` section of the task definition.
+#
+# 4. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
+#    See the documentation for each action used below for the recommended IAM policies for this IAM user,
+#    and best practices on handling the access key credentials.
 
 name: Deploy to Amazon ECS
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 env:
-  AWS_REGION: eu-west-2                           # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: my-app                          # set this to your Amazon ECR repository name
-  ECS_SERVICE: my-app-service                     # set this to your Amazon ECS service name
-  ECS_CLUSTER: default                            # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-definition.json       # set this to the path to your Amazon ECS task definition
-                                                  # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: my-app-container               # set this to the name of the container in the
-                                                  # containerDefinitions section of your task definition
+  AWS_REGION: us-east-2                               # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: my-repo                             # set this to your Amazon ECR repository name
+  ECS_SERVICE: sample-app-service                     # set this to your Amazon ECS service name
+  ECS_CLUSTER: default                                # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: task-definition                # set this to the path to your Amazon ECS task definition
+                                                      # file, e.g. .aws/task-definition.json
+  CONTAINER_NAME: sample-app                          # set this to the name of the container in the
+                                                      # containerDefinitions section of your task definition
+  DEPLOY_PACKAGE_NAME: "flask_app_${{ github.sha }}.zip"
+  EB_PACKAGE_S3_BUCKET_NAME: "devsecops-project-2022"
 
 jobs:
-  security-check:
+
+  CI-pipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: sast-scan
-        uses: azure/container-scan@v0
-        with:
-         image-name: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      - name: Git clone our repo
+        uses: actions/checkout@v2
 
-          
-  deploy:
-    name: Deploy
+      - name: Create ZIP deployment
+        run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+        
+      - name: Configure my AWS Credentionals
+        uses: aws-actions/configure-aws-credentials@v1 
+        with: 
+          aws-access-key-id    : ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region           : ${{ env.AWS_REGION }}
+   
+      - name: Copy Deployment Package to S3 Bucket 
+        run : aws s3 cp ${{ env.DEPLOY_PACKAGE_NAME }} s3://${{env.EB_PACKAGE_S3_BUCKET_NAME}}/
+      
+      - name: Print Happy Message for CI Finish
+        run:  echo "CI Pipeline Part finished successfully"
+      
+  CD-pipeline:
     runs-on: ubuntu-latest
+    needs: [CI-pipeline]
     environment: production
 
     steps:
@@ -42,8 +79,8 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.MY_AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.MY_AWS_SECRET_KEY }}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Login to Amazon ECR
@@ -63,5 +100,18 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-  
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: ${{ steps.build-image.outputs.image }}
 
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
