--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           sarif_file: results.sarif
           
-      - name: Sast-Scan
+      - name: Check Creds Leaks
         uses: AppThreat/sast-scan-action@master
         with:
           type: "credscan"
@@ -64,7 +64,7 @@ jobs:
       
   CD-pipeline:
     runs-on: ubuntu-latest
-    needs: [CI-pipeline]
+    needs: [CI-pipeline, Security-check]
     environment: production
 
     steps:
