--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,27 +19,7 @@ env:
   DEPLOY_PACKAGE_NAME: "flask_app_${{ github.sha }}.zip"
   EB_PACKAGE_S3_BUCKET_NAME: "devsecops-project-2022"
 
-jobs:
-
-  Security-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Psalm Security Scan
-        uses: docker://ghcr.io/psalm/psalm-security-scan
-        
-      - name: Upload Security Analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: results.sarif
-          
-      - name: Check Creds Leaks
-        uses: AppThreat/sast-scan-action@master
-        with:
-          type: "credscan"
-      
+jobs:      
   CI-pipeline:
     runs-on: ubuntu-latest
     steps:
@@ -61,10 +41,32 @@ jobs:
       
       - name: Print Happy Message for CI Finish
         run:  echo "CI Pipeline Part finished successfully"
-      
+        
+  Security-check:
+      runs-on: ubuntu-latest
+      needs: [CI-pipeline]
+      steps:
+       - name: SAST Scan PHP
+         uses: docker://ghcr.io/psalm/psalm-security-scan
+        
+       - name: Upload SAST Scan PHP results to GitHub
+         uses: github/codeql-action/upload-sarif@v1
+         with:
+          sarif_file: results.sarif
+           
+       - name: Check Creds Leaks
+         uses: AppThreat/sast-scan-action@master
+         with:
+           type: "credscan"    
+           
+       - name: Check Securing AWS Resources
+         uses: AppThreat/sast-scan-action@master
+         with:
+           type: "credscan"         
+           
   CD-pipeline:
     runs-on: ubuntu-latest
-    needs: [CI-pipeline, Security-check]
+    needs: [Security-check]
     environment: production
 
     steps:
