--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   AWS_REGION: us-east-2                               # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: my-repo                             # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: my-public-repo                             # set this to your Amazon ECR repository name
   ECS_SERVICE: sample-app-service                     # set this to your Amazon ECS service name
   ECS_CLUSTER: default                                # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json                # set this to the path to your Amazon ECS task definition
