--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         run:  echo "CI Pipeline Part finished successfully"
         
            
-  Security-check:
+  SAST-Scan:
       runs-on: ubuntu-latest
       needs: [CI-pipeline]
       steps:       
@@ -57,19 +57,31 @@ jobs:
          uses: github/codeql-action/upload-sarif@v1
          with:
           sarif_file: results.sarif
-           
-       - name: Check Creds Leaks
-         uses: AppThreat/sast-scan-action@master
-         with:
-           type: "credscan"
-           output: reports
-           
+  
+  Scan-Creds:
+    runs-on: ubuntu-latest
+    needs: [CI-pipeline]
+    steps: 
+     - name: Check Creds Leaks
+       uses: AppThreat/sast-scan-action@master
+       with:
+         type: "credscan"
+         output: reports
+         
+  Scan-Securing-AWS-Resources:
+    runs-on: ubuntu-latest
+    needs: [CI-pipeline]
+    steps:            
        - name: Check Securing AWS Resources
          uses: AppThreat/sast-scan-action@master
          with:
            type: "aws"
            output: reports
-           
+   
+  Scan-Dependency:
+    runs-on: ubuntu-latest
+    needs: [CI-pipeline]
+    steps: 
        - name: Check Dependency
          uses: AppThreat/sast-scan-action@master
          with:
@@ -78,9 +90,8 @@ jobs:
            
   CD-pipeline:
     runs-on: ubuntu-latest
-    needs: [Security-check]
+    needs: [Scan-Dependency, Scan-Securing-AWS-Resources, Scan-Creds, SAST-Scan]
     environment: production
-
     steps:
     - name: Checkout
       uses: actions/checkout@v2
